<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sistema de Gestión</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="instalacion">Instalación</string>
    <string name="plantas_externas">Plantas Externas</string>
    <string name="reparacion">Reparación</string>
    <string name="notificar_averia">Localizar Avería</string>
    <string name="num_cliente">Ingrese número del Cliente:</string>
    <string name="hint_phone">Ej: 032 2233441</string>
    <string name="app_principal">Principal - Sistema de Gestión Técnica</string>
    <string name="app_instalacion">Instalación - Sistema de Gestión Técnica</string>
    <string name="app_averias">Notificar Averias - Sistema de Gestión Técnica</string>
    <string name="app_plantas_externas">Plantas Externas - Sistema de Gestión Técnica</string>
    <string name="app_reparacion">Reparación - Sistema de Gestión Técnica</string>
    <string name="buscar_info">Buscar Información</string>
    <string name="certificar">Certificar</string>
    <string name="volver">Volver</string>
    <string name="certificar_3g">Test señal 3G</string>
    <string name="titulo">SISTEMA DE GESTIÓN TÉCNICA</string>
    <string name="lorem">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ultrices metus ligula, et cursus elit aliquam sit amet. Nulla vel purus nunc. Vestibulum et magna nec nibh condimentum blandit a sed sapien "</string>
    <string-array name="equipos">
        <item >Cable</item>
        <item >Armario</item>
        <item >Caja</item>
        <item >Tablero</item>
    </string-array>
        <string name="notificar_averia1">NOTIFICAR AVERÍA DE EQUIPO</string>
        <string name="tipo">Tipo:</string>
        <string name="observaciones">OBSERVACIONES</string>
        <string name="notificar_averia3">Notificar Avería</string>
        <string name="certificar_wifi">Test Señal Wifi</string>
        <string name="certificar_wifi1">Certificar Wifi - Sistema de Gestión Técnica</string>
        <string name="certificacion_tecnica">CERTIFICACIÓN TÉCNICA</string>
        <string name="busqueda_cliente">BÚSQUEDA DEL CLIENTE</string>
        <string name="planta_externa">PLANTA EXTERNA</string>
        <string name="television_satelital">TELEVISIÓN SATELITAL</string>
        <string name="banda_ancha">BANDA ANCHA FIJA</string>
        <string name="certificacion">CERTIFICACIÓN</string>
        <string name="menu_principal">Menú Principal</string>
        <string name="ingrese_telefono">Ingrese el teléfono del cliente:</string>
        <string name="ej_telefono">Ej: 32 - 2216633</string>
        <string name="buscar">Buscar</string>
        <string name="equipo_actual">EQUIPO ACTUAL CLIENTE</string>
        <string name="guion">-</string>

</resources>