<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"   
    >
    
    <LinearLayout 
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/fondo1"
	    android:layout_margin="8dp"
    >
    
	    <TextView
	        android:id="@+id/txBienvenida"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="left"
	        android:text="@string/num_cliente"
	        android:textColor="#FFFFFF"
	        android:textSize="18sp" />

	    <EditText
	        android:id="@+id/telefono"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="11"
	        android:inputType="phone" 
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp" 
	        android:layout_marginTop="10dp"
	        android:background="#FFFFFF">

	        <requestFocus />
	    </EditText>

	    <TextView
	        android:id="@+id/txtSugerencia"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="15dp"
	        android:gravity="left"
	        android:text="@string/hint_phone"
	        android:textColor="#FFFFFF"
	        android:textSize="15sp" />

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="15dp" >

	        <Button
	            android:id="@+id/button1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/buscar_info" />

	        <Button
	            android:id="@+id/button2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/certificar" />

	    </LinearLayout>
    
    </LinearLayout>
    
   
</RelativeLayout>