<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#c8e2ea"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/fondo1"
        android:orientation="vertical" >
        
        <ImageView
            android:layout_width="125dp"
            android:layout_height="55dp"
            android:contentDescription="@string/titulo"
            android:src="@drawable/logo" />
        
        <TextView
            android:id="@+id/textView1"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:gravity="left"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="-40dp"
            android:text="@string/certificacion_tecnica" />
        
	</LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:gravity="center"
        android:background="@drawable/fondo1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txBienvenida"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/num_cliente"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/ins_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/fondo1"
            android:ems="11"
            android:inputType="phone"
            android:textSize="30sp" >

        </EditText>

        <TextView
            android:id="@+id/txtSugerencia"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:gravity="left"
            android:text="@string/hint_phone"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" >

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="desplegar_resultados"
                android:text="@string/buscar_info" />

            <Button
                android:id="@+id/ins_certificar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="desplegar_certificar"
                android:text="@string/certificar" />

        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="48dp"
        android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:gravity="center"
        android:background="@drawable/fondo1"
        android:orientation="vertical" >

	    <TextView
	        android:id="@+id/ins_resultado"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	         />
	    
	</LinearLayout>
    
    
    
    <RelativeLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        >
        
         <ImageButton
        android:id="@+id/button3"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/volver"
        android:onClick="volver"
        android:src="@android:drawable/ic_media_rew" />

        
        
    </RelativeLayout>

</RelativeLayout>