<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#c8e2ea"
    android:orientation="vertical"
    tools:context=".Certificar_Wifi" >
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/fondo1"
        android:orientation="vertical" >
        
        <ImageView
            android:layout_width="125dp"
            android:layout_height="55dp"
            android:contentDescription="@string/titulo"
            android:src="@drawable/logo" />
        
        <TextView
            android:id="@+id/textView1"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:gravity="left"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="-40dp"
            android:text="@string/certificacion_tecnica" />
        
	</LinearLayout>
    
    
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/fondo1"
        android:orientation="vertical" >
 
	    <TextView
	        android:id="@+id/mainText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/hello_world" />
	    
	</LinearLayout>
 
</RelativeLayout>  