<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_margin="8dp"
        android:background="@drawable/fondo1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txBienvenida"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/num_cliente"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#FFFFFF"
            android:ems="11"
            android:inputType="phone" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/txtSugerencia"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:gravity="left"
            android:text="@string/hint_phone"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" >

            <Button
                android:id="@+id/button_buscar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="buscar_info"
                android:text="@string/buscar_info" />

            <Button
                android:id="@+id/certificar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/certificar" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll_view1"
        android:layout_width="fill_parent"
        android:layout_height="250dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1" >

        <LinearLayout
            android:id="@+id/info_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/inventarioTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="INVENTARIO DEL CLIENTE" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#AAAAAA"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Categoría:"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:text="Planta Externa"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#AAAAAA"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" >

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nombre:"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="25dp"
                    android:text="Par Externo"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#AAAAAA"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" >

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Modelo"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="32dp"
                    android:text="Modelo 001 XTGPP"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#AAAAAA"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="Descripción" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right" >

                <Button
                    android:id="@+id/button4"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Editar" />

                <Button
                    android:id="@+id/button5"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="guardar"
                    android:text="Guardar" />

                <ImageButton
                    android:id="@+id/prev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="anterior"
                    android:src="@android:drawable/ic_media_previous" />

                <ImageButton
                    android:id="@+id/next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="siguiente"
                    android:src="@android:drawable/ic_media_next" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/button3"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/volver"
        android:onClick="volver"
        android:src="@android:drawable/ic_media_rew" />

</RelativeLayout>